--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,7 @@ jobs:
     strategy:
       matrix:
         arch: [amd64]
-        targetos: [darwin, linux]
-        include:
-          - targetos: darwin
-            arch: arm64
+        targetos: [linux]
     name: osmosis ${{ matrix.arch }} for ${{ matrix.targetos }}
     steps:
     - uses: actions/checkout@v3
